--- a/slides/slides_31.Rmd
+++ b/slides/slides_31.Rmd
@@ -23,12 +23,15 @@ set.seed(60637)
   font-size: x-small;
 }
 
-.small-text {
-  font-size: small;
-}
+# .show-only-last-code-result pre + pre:not(:last-of-type) code[class="remark-code"] {
+#     display: none;
+# }
 ```
 
-## What do we do with data
+
+
+ 
+# What do we do with data
 
 Now that we've gotten started on working with data...what do we want to get from that data?
 
@@ -57,8 +60,8 @@ This is already a really useful start, but beyond just describing the data we se
 These latter two are called *inference*, and we'll need some additional tools and assumptions to make headway on them
 
 ---
-
-# Why we use probability theory
+# Probability
+## Why do we use probability theory?
 
 - Probability theory allows us to talk about *random* events in structured way. 
 
@@ -108,7 +111,7 @@ Suppose we are flipping a coin twice, and the coin is fair. This is a random pro
 
 name: terms
 
-## Useful terms
+## Useful terms in probability
 
 <small>
 --
@@ -181,15 +184,15 @@ We have just used probability notation as a way to fully describe any random gen
 
 ---
 
-We can simulate our double coinflip process in R as well, using the `sample()` function. 
+We can simulate our double coin flip process in R, using the `sample()` function. There are four possible outcomes, and all are equally likely. 
 
 --
 
 ```{r coinflip}
-omega <- c('HH', 'HT', 'TH', 'TT')
+Omega <- c('HH', 'HT', 'TH', 'TT')
 probs <- c(0.25, 0.25, 0.25, 0.25)
 
-sample(x = omega,
+sample(x = Omega,
        size = 1,
        prob = probs)
 
@@ -201,7 +204,7 @@ We can run this simulation many times, and our results should *approximately* fo
 
 ```{r coinflip_many}
 n <- 1000
-result_n <- sample(x = omega,
+result_n <- sample(x = Omega,
        size = n,
        prob = probs,
        replace = TRUE)
@@ -209,344 +212,299 @@ result_n <- sample(x = omega,
 table(result_n)
 ```
 
-
----
-## Random variables
-
-- A random variable is a mapping $X$ from our sample space $\Omega$, to the Real numbers. 
-$$X : \Omega \to {\rm I\!R}$$
-
-- Random variables are ways to quantify random events described by our sample space. 
-- We'll mostly work with random variables going forward, but it's important to remember that the random variable is built on the foundations of the sample space -- and often, you'll be the one deciding how that quantification happens. 
-
 ---
 
-For example, with our two coin flips, let $X(\omega)$ be the number of heads in the sequence $\omega$. Then the random variable, and its probability distribution, can be described as:
+## Independent events
 
-
-|     $\omega$ | $P(\{\omega\})$ | $X(\omega)$ |
-|-------------:|----------------:|------------:|
-| TT           | 1/4             | 0           |
-| TH           | 1/4             | 1           |
-| HT           | 1/4             | 1           |
-| HH           | 1/4             | 2           |
-
-and,
-
-| $x$   | $P(X = x)$
-|----:|------------:|
-| 0   | 1/4         |
-| 1   | 1/2         |
-| 2   | 1/4         |
-
----
-
-We can simulate this in `R` as well. 
-
-```{r coinflipRV}
-X <- c(0, 1, 2)
-probs <- c(0.25, 0.5, 0.25)
-
-sample(x = X,
-       size = 1,
-       prob = probs)
-
-```
-
-```{r coinflip_manyRV}
-result_n <- sample(x = X,
-       size = n,
-       prob = probs,
-       replace = TRUE)
-
-table(result_n)
-```
-
-```{r coinflip_massRV}
-
-prop.table(table(result_n))
-
-```
-
----
-
-We can plot a histogram to look at the distribution of results. 
-```{r fig.width = 6, fig.height=6, fig.align='center'}
-
-ggplot(tibble(result_n), aes(x = result_n)) +
-  geom_histogram(bins = 3, position = 'identity', color = 'white')
-
-```
-
----
-
-## Probability Mass Function of a discrete random variable
-
-- A random variable is *discrete* if it takes countably many values. 
-- The probability mass function of a discrete RV $X$ tells us the probability we will see an outcome at some value $x$. 
+- Two events are *independent* if
 
 $$
-f(x) = P(X = x)
+P(AB) = P(A)P(B)
 $$
-For our coin flip example, 
+
+--
+
+*Notational aside: The event $AB$ is that both $A$ and $B$ happen. There are other ways to write this, including $A \cap B$.*
+
+---
+
+Returning to our example of flipping two fair coins. Let's say:
+
+- Event $A$: we get a head on the first coin flip; $A = \{HT, HH\}$. 
+- Event $B$: we get a head on the second coin flip; $B = \{TH, HH\}$. 
+- We can see the event $AB$ as the overlap in their respective sets, $AB = \{HH\}$
+
+---
+The coin flips are unrelated, so the events should be independent. We can check this mathematically.
+
+--
+
+- First, we know that all of the outcomes $\Omega = \{HH, HT, TH, TT \}$ are equally likely.
 
 
 $$
-f(x) = \begin{cases}
-1/4 & x = 0 \\\
-1/2 & x = 1 \\\
-1/4 & x = 2 \\\
-0 & \text{otherwise}
-\end{cases}
+\begin{align}
+P(A) &= P(\{HT\}) + P(\{HH\}) = 0.25 + 0.25 = 0.5\\\
+P(B) &= P(\{TH\}) + P(\{HH\}) = 0.25 + 0.25 = 0.5
+\end{align}
 $$
 
----
+--
 
-## Illustrating the PMF of a discrete RV
-
-```{r, fig.width = 5, fig.height=5, fig.align = 'center', echo=FALSE}
-plotdata <- tibble(
-  x = c(-1, 0, 1, 2),
-  xend = c(0, 1, 2, 3),
-  Fx = c(0, 1/4, 3/4, 1),
-  fx = c(0, 1/4, 1/2, 1/4)
-)
-
-ggplot(plotdata, aes(x = x, y = fx)) +
-  geom_point() +
-  coord_cartesian(xlim = c(-0.5, 2.5),
-                  ylim = c(0,1)) +
-  ggtitle('PMF of X as number of heads in 2 fair coin flips')
-```
-
----
-## Cumulative Distribution Functions
-
-- The cumulative distribution function of $X$ tells us the probability we will see an outcome less than or equal to some value $x$. 
+Then, we can calculate the product of the probabilities, and the probability of the joint event.
 
 $$
-F(x) = P(X \le x)
+\begin{align}
+P(A)P(B) &= 0.5 \times 0.5 = 0.25\\\
+P(A B) &= P(\{HH\}) = 0.25\
+\end{align}
 $$
 
+--
 
-For our coin flip example, 
-
-
-$$
-F(x) = \begin{cases}
-0 & x < 0 \\\
-1/4 & 0 \le x < 1 \\\
-3/4 & 1 \le x < 2 \\\
-1 & x \ge 2
-\end{cases}
-$$
-
----
-
-## Illustrating the CDF of a discrete RV
-
-```{r coinflip_plotRV, fig.width = 5, fig.height=5, fig.align = 'center', echo=FALSE}
-ggplot(plotdata, aes(x = x, y = Fx)) +
-  geom_segment(aes(x = x, y = Fx, xend = xend, yend = Fx)) + 
-  geom_point() +
-  geom_point(aes(x = xend, y = Fx), shape= 21, fill = 'white') +
-  coord_cartesian(xlim = c(-0.5, 2.5),
-                  ylim = c(0,1)) +
-  ggtitle('CDF of X as number of heads in 2 fair coin flips')
-```
-
----
-And we can use `ggplot2` to see what the *Empirical* CDF looks like
-```{r coinflip_simRV, fig.width = 5, fig.height=5, fig.align = 'center'}
-
-ggplot(tibble(result_n), aes(x = result_n)) +
-  stat_ecdf() +
-  coord_cartesian(xlim = c(-0.5, 2.5)) +
-  ylab('Empirical Fx') +
-  ggtitle('ECDF of X as number of heads in 2 fair coin flips')
-
-```
-
----
-
-## Continuous random variables
-
-- So far, our coin flip example was for a *discrete* random variable.  
-- A random variable is *continuous* if it has a continuous density function
- - Practically, we will treat RVs as discrete if they have countably many outcomes, and RVs as continuous if the number of values they can take on is only constrained by our measurement tool.
-
----
-
-## Uniform distribution
-
-- If you take a draw from the standard uniform distribution, you are equally likely to draw any number between zero and one.
-
-- We can simulate this in R. R allows you to sample from a number of canonical distributions; to see which distributions are available, search `?Distributions`. 
-
-```{r standard_uniform}
-runif(n = 1, min = 0, max = 1)
-```
-
----
-
-We can again sample from the distribution many times, and plot a histogram to look at the distribution of results. 
-
-```{r standard_uniform_many, fig.width = 6, fig.height=4, fig.align = 'center'}
-result_n <- runif(n, min = 0, max = 1)
-
-ggplot(tibble(result_n), aes(x = result_n)) +
-  geom_histogram(breaks = seq(0, 1, length.out = 15),  
-                 position = 'identity', color = 'white')
-```
-
----
-
-## Probability Density Function of continuous random variables
-
-
-
-- Discrete random variables have non-zero mass on specific points, but for continuous random variables, $P(X = x) = 0$. Instead of mass, we refer to *density* for continuous variables. [2]
-
-
-
-.footnote[[2] Measure theory give a unified approach to measuring discrete and continuous random variables, but for simplicity, we'll keep the dichotomy of mass vs. density for discrete/continuous here. ]
-
-- The *probability density function* $f(x)$ for a continuous random variable gives the slope of the CDF at any given point. This means that we can integrate the area under the PDF to get the relative probability of being between two points. 
+We see that they are the same, so we have independence.
 
 $$
-P(a < X < b) = \int_a^b f(x)dx
+P(A)P(B) = P(A B)
 $$
 
----
-
-## Illustrating the CDF of a continuous RV
-<small>
-- We start by showing the CDF of the standard uniform distribution, to illustrate how the PDF relates to the CDF. 
-
-- The CDF for the standard uniform distribution is:
-
-$$
-F(x) = 
-\begin{cases}
-0 & x < 0\\\
-x & 0 \le x \le 1 \\\
-1 & x > 1
-\end{cases}
-$$
-
-- Notice that the slope is 1 between 0 and 1. 
 </small>
 
-```{r uniform_plot, fig.width = 4, fig.height=4, fig.align = 'center', echo=FALSE}
+---
 
+<small>
 
-plotdata <- tibble(
-  x = c(-1, 0, 1, 2),
-  Fx = c(0, 0, 1, 1)
-)
+We can also check if observed proportions in our simulations show the same thing. 
 
-ggplot(plotdata, aes(x = x, y = Fx)) +
-  geom_line() + 
-  coord_cartesian(xlim = c(-0.5, 1.5),
-                  ylim = c(0,1)) +
-  ggtitle('CDF of Standard Uniform Distribution')
+```{r}
+Omega <- c('HH', 'HT', 'TH', 'TT');  probs <- c(0.25, 0.25, 0.25, 0.25)
+result_n <- sample(x = Omega, 
+                   size = n,
+                   prob = probs,
+                   replace = TRUE)
+
+(observed_props <- prop.table(table(result_n)))
 ```
+
+--
+
+```{r}
+(PA <- mean(result_n == 'HT' | result_n == 'HH'))
+```
+
+--
+
+```{r}
+(PB <- mean(result_n == 'TH' | result_n == 'HH'))
+```
+
+--
+
+```{r}
+(PAB <- mean(result_n == 'HH'))
+PA*PB
+```
+
+The proportions look pretty close. 
 
 ---
 
-## Illustrating the PDF of a continuous random variable
+<small>
 
-- The PDF for the standard uniform distribution is:
-$$
-f(x) = \begin{cases}
-1 & 0 < x < 1\\\
-0 & \text{otherwise.}
-\end{cases}
-$$
+What about for a case where $A$ and $B$ are not independent? 
 
-```{r, fig.width = 4, fig.height=4, fig.align = 'center', echo=FALSE}
-plotdata <- tibble(
-  x = c(-1, 0, 1, 1),
-  xend = c(0, 1, 1, 2),
-  fx = c(0, 1, 1, 0)
-)
+--
 
-ggplot(plotdata, aes(x = x, y = fx)) +
-  geom_segment(aes(x = x, y = fx, xend = xend, yend = fx)) + 
-  geom_point() +
-  geom_point(aes(x = 0, y = 0), shape= 21, fill = 'white') +
-  geom_point(aes(x = 1, y = 0), shape= 21, fill = 'white') +
-  coord_cartesian(xlim = c(-0.5, 1.5),
-                  ylim = c(0,1)) +
-  ggtitle('PDF of Standard Uniform Distribution')
+- Let's say $A$ is still the event that we get a head on the first coin flip; $A = \{HT, HH\}$. 
+
+- But event $B$ is now the event that we get a head on both coin flips; $B = \{HH\}$. 
+
+- $AB$ is the intersection of these two sets, which is just $AB = \{HH\}$. 
+
+```{r}
+(observed_props <- prop.table(table(result_n)))
 ```
+
+--
+
+```{r}
+(PA <- mean(result_n == 'HT' | result_n == 'HH'))
+```
+
+--
+
+```{r}
+(PB <- mean(result_n == 'HH'))
+```
+
+--
+
+```{r}
+(PAB <- mean(result_n == 'HH'))
+PA*PB
+```
+
+The proportions are then quite different. 
 
 ---
 
-- Notice that if we take the area under the density curve, the total area will sum to 1.  
+# Conditional probability
 
-
-```{r, fig.width = 4, fig.height=4, fig.align = 'center', echo=FALSE}
-datapoly <- tibble(x = c(0, 0, 1, 1),
-                   y = c(0, 1, 1, 0))
-
-ggplot(plotdata, aes(x = x, y = fx)) +
-  geom_segment(aes(x = x, y = fx, xend = xend, yend = fx)) + 
-  geom_point() +
-  geom_point(aes(x = 0, y = 0), shape= 21, fill = 'white') +
-  geom_point(aes(x = 1, y = 0), shape= 21, fill = 'white') +
-  coord_cartesian(xlim = c(-0.5, 1.5),
-                  ylim = c(0,1)) +
-  ggtitle('PDF of Standard Uniform Distribution')
-  
-```
-
----
-
-- Notice that if we take the area under the density curve, the total area will sum to 1. Relative density gives us relative probability. 
-
-
-```{r, fig.width = 4, fig.height=4, fig.align = 'center', echo=FALSE}
-datapoly <- tibble(x = c(0, 0, 1, 1),
-                   y = c(0, 1, 1, 0))
-
-ggplot(plotdata, aes(x = x, y = fx)) +
-  geom_segment(aes(x = x, y = fx, xend = xend, yend = fx)) + 
-  geom_point() +
-  geom_point(aes(x = 0, y = 0), shape= 21, fill = 'white') +
-  geom_point(aes(x = 1, y = 0), shape= 21, fill = 'white') +
-  coord_cartesian(xlim = c(-0.5, 1.5),
-                  ylim = c(0,1)) +
-  geom_polygon(data = datapoly, aes(x = x, y = y), fill = 'blue', alpha = 0.5) + 
-  ggtitle('PDF of Standard Uniform Distribution')
-```
-
----
-
-- If we want to get the probability $X$ is between 0 and 0.75, 
+If $P(B)>0$, the *conditional probability* of an event $A$ occurring, given event $B$ has occurred is:
 
 $$
-P(0 \le x \le .75) = \int_0^.75 f(x)dx
+P(A|B) = \frac{P(A B)}{P(B)}
 $$
 --
-we take the area under the density curve between 0 and 0.75 -- which is also 0.75. (Notice that we don't need to use calculus here.) 
+This can also be read as, out of all of the times event $B$ occurs, how many times does event $A$ also occur?
+
+---
+
+For our coin flip example, we'll stick with:
+- $A$ is  the event that we get a head on the first coin flip; $A = \{HT, HH\}$. 
+- $B$ is the event that we get a head on the both coin flips; $B = \{HH\}$. 
+- $A  B$ is $\{HH\}$
+
+--
+
+$$
+\begin{align}
+P(A |B)& = \frac{P(A B)}{P(B)}\\\
+& = \frac{P(\{ HH \})}{P(\{ HH \})}\\\
+& = 1
+\end{align}
+$$
+
+--
+
+What is $P(B |A)$?
+---
+
+## Bayes Rule
+
+A useful theorem to return to is *Bayes Rule*
+
+$$
+P(A|B) = \frac{P(B|A)P(A)}{P(B)}
+$$
+
+--
+Why is Bayes rule so useful? 
+--
+It basically tells us how we update probability based on observed data. 
+
+---
+<small>
+
+## Bayes Rule
+
+Example: Suppose everyone in the University of Chicago community is given a new rapid test for COVID. 
+
+- We are concerned with *false negatives*, when we get a negative test for a person who actually *is* infected.
+- And *false positives*, when we get a positive test for a person who *is not* infected.
+
+---
+<small>
+
+## Bayes Rule
 
 
-```{r, fig.width = 5, fig.height=5, fig.align = 'center', echo=FALSE}
-datapoly <- tibble(x = c(0, 0, 0.75, 0.75),
-                   y = c(0, 1, 1, 0))
 
-ggplot(plotdata, aes(x = x, y = fx)) +
-  geom_segment(aes(x = x, y = fx, xend = xend, yend = fx)) + 
-  geom_point() +
-  geom_point(aes(x = 0, y = 0), shape= 21, fill = 'white') +
-  geom_point(aes(x = 1, y = 0), shape= 21, fill = 'white') +
-  coord_cartesian(xlim = c(-0.5, 1.5),
-                  ylim = c(0,1)) +
-  geom_polygon(data = datapoly, aes(x = x, y = y), fill = 'blue', alpha = 0.5) + 
-  ggtitle('PDF of Standard Uniform Distribution')
+Example: Suppose everyone in the University of Chicago community is given a new rapid test for COVID. 
+
+A student gets a positive test back. What is the probability that they have COVID?
+
+--
+
+- Doctors know that the probability of having COVID is 3% in this population : $P(A)$ 
+```{r}
+PA <- 0.03
+```
+--
+- The overall rate of positive tests is 5% : $P(B)$ 
+```{r}
+PB <- 0.05
+```
+--
+- If you have COVID, your test will turn up positive 95% of the time. : $P(B|A)$ 
+```{r}
+PB_if_A <- 0.95
 ```
 
+
+--
+
+$$
+\begin{align*}
+P(A|B) & = \frac{P(B|A)P(A)}{P(B)}
+\end{align*}
+$$
+
+--
+
+```{r}
+( PB_if_A * PA )/PB
+```
+
+
+---
+## Prosecutor's fallacy
+
+$$
+P(A|B)\overset{?}= P(B|A)
+$$
+--
+
+As a general rule, we cannot assume the conditional probability of $A$ given $B$ is the same as the probability of $B$ given $A$
+
+--
+- In a court case, the probability that a person is guilty given that we see a DNA match is NOT the same as the probability of a DNA match given  that they are guilty.  
+
+--
+
+- This fallacy often occurs when we observe evidence that we are very unlikely to see among innocent people, and very likely to observe among guilty people
+
+--
+
+- But the overall number of innocent people in the population is very large, so the number of false positives is much higher than the number of true positives
+
+---
+
+#### Why thinking about conditional probability is so important in social science research
+
+What data do you need to answer the question: "Do white officers shoot minority citizens at a higher rate than non-white officers?"
+
+---
+
+#### Why thinking about conditional probability is so important in social science research
+
+![Johnson et al. PNAS](slides_31_files/johnson-et-al-PNAS.png)
+- In a 2020 paper, Johnson and co-authors evaluated the relationship between race of victims shot by police, and the characteristics of the police shooters
+
+- The authors claim, "White officers are not more likely to shoot minority civilians than non-White officers"--and the paper has been used in congressional testimony to support the claim that diversity in police forces would not be beneficial in reducing bias in officer-involved shootings
+
+- Their database only has data on fatal shootings--not on cases where people were NOT shot. 
+- Their results report "whether a person fatally shot was more likely to be Black (or Hispanic) than White" conditional on the race of the officer involved
+
+- Does this address original claim?
+
+---
+"White officers are not more likely to shoot minority civilians than non-White officers"
+
+$$
+\begin{align}
+P(\text{shot} | \text{White officer, minority civilian}) -\\\
+P(\text{shot} | \text{Minority officer, minority civilian})
+\end{align}
+$$
+
+What data are we missing to address this question?
+
+--
+
+- Dean Knox & Jonathan Mummolo wrote a letter critiquing tge original article, based on the authors' failure to appropriately apply Bayes Rule;
+- The article was eventually retracted
+- (It's a bit more complicated than that, but know your conditional probability when thinking about difficult subjects!)
 
 
 
