--- a/slides/slides_61.Rmd
+++ b/slides/slides_61.Rmd
@@ -1,15 +1,14 @@
 ---
-title: "6.1 Regression intuition"
-subtitle: "PLSC30500, Fall 2021"
-output: 
+title: "Regression intuition"
+output:
   xaringan::moon_reader:
-    css: [default, fc, fc-fonts]
-    ration: '16:9'
+    css: [default, robot, robot-fonts]
     nature:
       highlightStyle: atelier-lakeside-light
-      highlightLines: true
-      countIncrementalSlides: false
-  
+      highlightLines: yes
+      countIncrementalSlides: no
+    pandoc_args: --metadata-file=./common.yaml
+
 ---
 
 ```{r setup, include=FALSE}
@@ -168,9 +167,8 @@ This also works when you have many covariates $X_1, X_2, \ldots$, not just one
 
 ---
 
-
-###  The math behind the FWL theorem
-
+#### The math behind the FWL theorem
+s
 Consider three fitted regression equations:
 
 $$\begin{eqnarray}
@@ -188,18 +186,15 @@ Now observe that
 - $X_i$ is uncorrelated with $\hat{\varepsilon}$ (**fact 2**), and
 - $\hat{r}_i$ is uncorrelated with $\hat{\varepsilon}$ b/c $D_i$ is uncorrelated with $\hat{r}_i$ (**fact 2**), and $\hat{\varepsilon}_i$ is part of $D_i$.
 
-So:
-
-$$\begin{eqnarray} \frac{\text{cov}(Y_i, \hat{\varepsilon}_i)}{\text{var}(\hat{\varepsilon}_i)} = \frac{\text{cov}(\hat{\beta_1} D_i, \hat{\varepsilon}_i)}{\text{var}(\hat{\varepsilon}_i)} =
-\hat{\beta_1} \frac{\text{cov}(\hat{\alpha}_0 + \hat{\alpha}_1 X_i  + \hat{\varepsilon}_i, \hat{\varepsilon}_i)}{\text{var}(\hat{\varepsilon}_i)} =
-\hat{\beta_1}\frac{\text{cov}(\hat{\varepsilon}_i, \hat{\varepsilon}_i)}{\text{var}(\hat{\varepsilon}_i)} = \hat{\beta_1}
-\end{eqnarray}$$
+So: $\frac{\text{cov}(Y_i, \hat{\varepsilon}_i)}{\text{var}(\hat{\varepsilon}_i)}$ 
+$= \frac{\text{cov}(\hat{\beta_1} D_i, \hat{\varepsilon}_i)}{\text{var}(\hat{\varepsilon}_i)}$ 
+$=\hat{\beta_1} \frac{\text{cov}(\hat{\alpha}_0 + \hat{\alpha}_1 X_i  + \hat{\varepsilon}_i, \hat{\varepsilon}_i)}{\text{var}(\hat{\varepsilon}_i)}$ $= \hat{\beta_1}\frac{\text{cov}(\hat{\varepsilon}_i, \hat{\varepsilon}_i)}{\text{var}(\hat{\varepsilon}_i)} = \hat{\beta_1}$
 
 
 
 ---
 
-## Using the FWL theorem
+### Using the FWL theorem
 
 To interpret $\hat{\beta}_1$ in a regression like 
 $$
@@ -264,7 +259,7 @@ The question here is one you should ask when thinking about any empirical findin
 
 
 
-### The math behind the OVB equation 
+#### The math behind the OVB equation 
 
 Consider three fitted regression equations: 
 
